--- a/templates/index.html
+++ b/templates/index.html
@@ -35,25 +35,25 @@
                 <ul class="navbar-nav ml-auto flex gap-2 md:gap-6 items-center">
                     <li class="nav-item selected relative group">
                         <a class="nav-link navbar-link text-lg font-semibold transition-colors duration-200 hover:text-[#99FF66] text-nowrap" href="{{ url_for('main.index') }}" title="Home">
-                            Home
+                            <i class="fas fa-home mr-2"></i>Home
                         </a>
                         <span class="circle transition-all duration-300 group-hover:bg-[#99FF66]"></span>
                     </li>
                     <li class="nav-item relative group">
                         <a class="nav-link navbar-link text-lg font-semibold transition-colors duration-200 hover:text-[#99FF66] text-nowrap" href="{{ url_for('main.csv_to_video') }}" title="Transform your data into stunning videos">
-                            Data Magic
+                            <i class="fas fa-chart-line mr-2"></i>Data Magic
                         </a>
                         <span class="circle transition-all duration-300 group-hover:bg-[#99FF66]"></span>
                     </li>
                     <li class="nav-item relative group">
                         <a class="nav-link navbar-link text-lg font-semibold transition-colors duration-200 hover:text-[#99FF66] text-nowrap" href="{{ url_for('main.text_to_video') }}" title="Turn your ideas into visual stories">
-                            Story Lab
+                            <i class="fas fa-lightbulb mr-2"></i>Story Lab
                         </a>
                         <span class="circle transition-all duration-300 group-hover:bg-[#99FF66]"></span>
                     </li>
                     <li class="nav-item relative group">
                         <a class="nav-link navbar-link text-lg font-semibold transition-colors duration-200 hover:text-[#99FF66] text-nowrap" href="{{ url_for('main.multi_model_template') }}" title="Create professional-grade visual content">
-                            Pro Studio
+                            <i class="fas fa-crown mr-2"></i>Pro Studio
                         </a>
                         <span class="circle transition-all duration-300 group-hover:bg-[#99FF66]"></span>
                     </li>
